# filmwatchcount

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
filmwatch/: asgi.py  settings.py  urls.py
filmwatch/filmwatch/: settings.py  urls.py  wsgi.py
filmwatch/static/: home.css  home.js
filmwatch/tracker/: models.py  owner.py  urls.py  views.py
filmwatchcount/: admin.py  apiviews.py  apps.py  filters.py  manage.py  metadata.py  models.py  owner.py  permissions.py  pwaviews.py  serializers.py  urls.py  views.py
filmwatchcount/filmwatchcount/: asgi.py  settings.py  urls.py  wsgi.py
filmwatchcount/filmwatchpwa/: apps.py  urls.py  views.py
filmwatchcount/migrations/: 0001_initial.py  0002_filmgroup_filmgroup.py  0003_auto_20220630_1245.py  0004_alter_filmwatch_datewatched.py  0005_auto_20220707_1156.py  0006_film_releaseyear.py  0007_auto_20220710_1617.py  0008_alter_filmwatch_datewatched.py  0009_alter_filmwatch_options.py
filmwatchcount/tracker/: owner.py  pwaviews.py  urls.py  views.py
filmwatchcount_react/: package.json
filmwatchcount_react/src/: App.js  constants.js  index.js  loaders.js  router.js  service-worker.js
filmwatchcount_react/src/pages/: Home.js  (+1 more)
filmwatchpwa/: urls.py
project/: settings.py  urls.py
static/: list.js  object.css
tracker/: models.py  urls.py  views.py
tracker/migrations/: 0003_auto_20220630_1245.py  0005_auto_20220707_1156.py  0006_film_releaseyear.py  0008_alter_filmwatch_datewatched.py
tracker/static/: manifest.json  watchcount.js
(+139 files in other folders)
