[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filmwatchcount"
version = "1.0.0"
authors = [
    { name="Elli Greaves" },
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
description = "Web app for tracking how many times you've watched films"
readme = "README.md"
requires-python = ">=3.10,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.16.0",
    "django-filter>=25.1",
]

[project.urls]
"Homepage" = "https://github.com/Grvs44/filmwatchcount"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["filmwatchcount", "filmwatchcount.*"]
